[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/advanced-camera2d/AdvancedCamera2D.gd" type="Script" id=1]

[node name="AdvancedCamera2D" type="Camera2D"]
position = Vector2( 56, -72 )
current = true
limit_left = 0
limit_top = -256
limit_right = 512
limit_bottom = 240
limit_smoothed = true
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
script = ExtResource( 1 )

[node name="ShakeDuration" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ShakeDuration" to="." method="_on_ShakeDuration_timeout"]
